# chatpulse

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.claude/: settings.json
.gitea/workflows/: build.yaml
.githooks/: pre-commit
.github/workflows/: ci.yaml  docker.yaml  infra-scan.yaml
k8s/: cronjob-ingest.yaml  deployment-extraction.yaml  deployment-web.yaml  ingress.yaml  namespace.yaml  pv-nfs.yaml  pvc.yaml  secret.yaml  service-extraction.yaml  service-web.yaml
launchd/: chatpulse-sync.sh  com.chatpulse.sync.plist
migrations/: 001_initial-schema.sql  001_initial-schema_down.sql  README.md  database.json  package.json
scripts/: infra-scan.sh
services/extraction/: Dockerfile  pyproject.toml
services/extraction/src/chatpulse_extraction/: __init__.py  analysis.py  db.py  main.py  models.py
services/extraction/src/chatpulse_extraction/routes/: __init__.py  analysis.py  extraction.py
services/extraction/tests/: conftest.py  test_analysis.py
services/web/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
services/web/src/: ingest.ts
services/web/src/client/: App.tsx  index.html  main.tsx
services/web/src/client/lib/: api.ts
services/web/src/client/types/: react-plotly.d.ts
services/web/src/server/: index.ts
services/web/src/server/__tests__/: dateConvert.test.ts  errorHandler.test.ts  proxy.test.ts  upload.test.ts  watermark.test.ts
services/web/src/server/middleware/: errorHandler.ts
services/web/src/server/routes/: analysis.ts  messages.ts  upload.ts
(+8 files in other folders)
