[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatpulse-extraction"
version = "0.1.0"
description = "Data extraction and analysis microservice for ChatPulse (Apple Messages chat.db)"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2,<3",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
    "httpx>=0.28,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
